# ohh-lens

./: .gitignore  Package.swift
.codex/environments/: environment.toml
OhhLens.xcodeproj/: project.pbxproj
OhhLens.xcodeproj/xcshareddata/xcschemes/: OhhLens.xcscheme
Sources/OhhLensApp/: ContentView.swift  OhhLensApp.swift  SetupView.swift  SidebarView.swift
Sources/OhhLensApp/Views/: ConversationsView.swift  FilesView.swift  HistoryView.swift  LiveView.swift  SetupView.swift
Sources/OhhLensCore/: AppSection.swift  AppShellSupport.swift  AppStore.swift
Sources/OhhLensCore/Models/: AccentTheme.swift  AppSection.swift  AppearanceMode.swift  AudioLevelSnapshot.swift  (+11 more)
Tests/OhhLensCoreTests/: AppStoreTests.swift  AudioChunkPipelineTests.swift  FunASRStreamingClientTests.swift  HistoryStoreTests.swift  LocalServiceManagerTests.swift  LoopbackCaptureServiceTests.swift  OhhLensCoreTests.swift  VirtualDeviceDiagnosticsTests.swift
backend/ohh-lens-speech-server/: README.md  pyproject.toml
backend/ohh-lens-speech-server/app/: main.py
backend/ohh-lens-speech-server/app/api/: health.py  ws.py
backend/ohh-lens-speech-server/app/audio/: buffer.py
backend/ohh-lens-speech-server/app/core/: config.py  live_translation.py  protocol.py  session_manager.py  translation.py
backend/ohh-lens-speech-server/app/funasr/: adapter.py  models.py
backend/ohh-lens-speech-server/tests/: test_adapter.py  test_buffer.py  test_config.py  test_health.py  test_protocol.py  test_translation.py  test_ws_flow.py
docs/qa/: manual-smoke-checklist.md
script/: build_and_run.sh
(+44 files in other folders)
