[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohh-lens-speech-server"
version = "0.1.0"
description = "Local streaming speech gateway for Ohh Lens"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "numpy>=1.26,<3.0",
  "funasr",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]
